--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -800,7 +800,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/farmer-field.jpg") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
@@ -912,7 +912,7 @@ section {
 # Counts
 --------------------------------------------------------------*/
 .counts {
-  background: url("../img/counts-bg.jpg") center center no-repeat;
+  background: url("../img/timeline_bg.jpg") center center no-repeat;
   background-size: cover;
   padding: 80px 0 60px 0;
   position: relative;
@@ -921,7 +921,7 @@ section {
 .counts::before {
   content: "";
   position: absolute;
-  background: rgba(17, 17, 17, 0.9);
+  background: rgba(17, 17, 17, 0.7);
   left: 0;
   right: 0;
   top: 0;
@@ -1622,4 +1622,41 @@ section {
   width: 50%;
   border: 3px solid green;
   padding: 10px;
+}
+
+
+/*--------------------------------------------------------------
+# Timeline
+--------------------------------------------------------------*/
+.timeline-with-icons {
+  border-left: 1px solid hsl(0, 0%, 90%);
+  position: relative;
+  list-style: none;
+}
+
+.timeline-with-icons .text{
+  color: #e7e7e7;
+}
+
+.timeline-with-icons .timeline-item {
+  position: relative;
+}
+
+.timeline-with-icons .timeline-item:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+
+.timeline-with-icons .timeline-icon {
+  position: absolute;
+  left: -48px;
+  background-color: hsl(217, 88.2%, 90%);
+  color: hsl(217, 88.8%, 35.1%);
+  border-radius: 50%;
+  height: 31px;
+  width: 31px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
